--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "karma-sourcemap-loader": "^0.4.0",
     "karma-spec-reporter": "0.0.36",
     "mocha": "^10.8.2",
+    "prettier": "3.4.1",
     "puppeteer": "^23.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
