chore: progress converting to ts

--- a/examples/package.json
+++ b/examples/package.json
@@ -2,7 +2,7 @@
   "name": "react-stay-scrolled-examples",
   "version": "0.0.1",
   "description": "Live examples of react-stay-scrolled in action",
-  "main": "src/main.jsx",
+  "main": "src/main.tsx",
   "scripts": {
     "start": "rollup -c",
     "develop": "rollup --watch -c"
