--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,15 +3,20 @@
     "airbnb",
     "plugin:react/jsx-runtime",
     "plugin:unicorn/recommended",
-    "plugin:@eslint-community/eslint-comments/recommended"
+    "plugin:@eslint-community/eslint-comments/recommended",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
   ],
-  "plugins": ["unicorn"],
+  "plugins": ["unicorn", "@typescript-eslint"],
   "env": {
     "browser": true
   },
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
   "rules": {
     "max-len": ["error", { "code": 100, "ignoreComments": true }],
