--- a/package.json
+++ b/package.json
@@ -52,15 +52,21 @@
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-replace": "^6.0.1",
+    "@types/node": "^22.10.0",
+    "@types/react": "^18.3.12",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
     "babel-plugin-dev-expression": "^0.2.3",
     "babel-plugin-istanbul": "^7.0.0",
     "chai": "^4.5.0",
     "dirty-chai": "^2.0.1",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-mocha": "^10.5.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-unicorn": "^55.0.0",
@@ -74,14 +80,15 @@
     "karma-sourcemap-loader": "^0.4.0",
     "karma-spec-reporter": "0.0.36",
     "mocha": "^10.8.2",
-    "prettier": "3.4.1",
+    "prettier": "^3.4.1",
     "puppeteer": "^23.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup": "^4.24.3",
     "sinon": "^19.0.2",
     "sinon-chai": "^3.7.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "typescript": "^5.7.2"
   },
   "dependencies": {
     "tiny-invariant": "^1.3.3"
