update babel for ts

--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,3 +1,8 @@
 {
-  "plugins": ["dev-expression"]
+  "plugins": ["dev-expression"],
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react",
+    "@babel/preset-typescript"
+  ]
 }
