--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint --cache .",
     "test": "karma start karma.conf.cjs --single-run --no-auto-watch",
     "tdd": "karma start karma.conf.cjs",
-    "build": "babel src -s -d dist",
+    "build": "babel src -s -d dist --extensions '.ts,.tsx,.js,.jsx' --ignore '**/*.test.*'",
     "prepare": "npm run build"
   },
   "files": [
@@ -45,7 +45,7 @@
   "devDependencies": {
     "@babel/cli": "^7.25.9",
     "@babel/core": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-react": "^7.26.3",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.4.1",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-babel": "^6.0.4",
@@ -91,6 +91,8 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "tiny-invariant": "^1.3.3"
   }
 }
