--- a/examples/package.json
+++ b/examples/package.json
@@ -17,11 +17,13 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-replace": "^3.0.0",
+    "@types/react-dom": "^19.0.2",
     "rollup": "^2.58.3",
     "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-serve": "^1.1.0"
   },
   "dependencies": {
+    "@rollup/plugin-typescript": "^12.1.2",
     "prop-types": "^15.7.2",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
