--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,5 @@
 {
   "extends": [
-    "airbnb",
-    "plugin:react/jsx-runtime",
     "plugin:unicorn/recommended",
     "plugin:@eslint-community/eslint-comments/recommended",
     "eslint:recommended",
@@ -19,21 +17,8 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "react/react-in-jsx-scope": "off",
     "max-len": ["error", { "code": 100, "ignoreComments": true }],
-    "react/function-component-definition": [
-      2,
-      { "namedComponents": "arrow-function" }
-    ],
-    "import/no-extraneous-dependencies": [
-      "error",
-      {
-        "devDependencies": [
-          "test/**",
-          "karma.conf.cjs",
-          "examples/rollup.config.js"
-        ]
-      }
-    ],
     "unicorn/no-null": 0,
     "unicorn/prevent-abbreviations": 0,
     "unicorn/no-anonymous-default-export": 0,
