--- a/package.json
+++ b/package.json
@@ -11,6 +11,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "tiny-invariant": "^1.3.3"
+  },
+  "peerDependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
