--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "prettier": "^3.4.2"
   },
   "dependencies": {
     "tiny-invariant": "^1.3.3"
