--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
+    "prettier": "^3.4.2",
     "typescript": "^5.7.2",
-    "prettier": "^3.4.2"
+    "typescript-eslint": "^8.18.2"
   },
   "dependencies": {
     "tiny-invariant": "^1.3.3"
