--- a/examples/package.json
+++ b/examples/package.json
@@ -13,8 +13,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13",
-    "react-draggable-scroll": "^1.1.0"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
