--- a/examples/package.json
+++ b/examples/package.json
@@ -13,7 +13,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "react-draggable-scroll": "file:../"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
